@@ -35,11 +35,14 @@ from _cpp import AutoIndenter
 PHP_KEYWORDS = ("__LINE__ __FILE__ __FUNCTION__ __CLASS__ __METHOD__ declare "
                 "else enddeclare endswitch elseif endif if switch as do endfor "
                 "endforeach endwhile for foreach while case default switch "
-                "return break continue exit var bool boolean int integer real "
-                "double float string array NULL extends global static include "
-                "require include_once require_once new true false function "
+                "break continue var bool boolean int integer real "
+                "double float string array NULL extends global static "
+                "new true false function "
                 "class object self final public private protected try catch "
-                "throw print abstract parent interface implements ")
+                "throw abstract parent interface implements "
+                # Language Constructs
+                "die echo empty exit eval include include_once isset list "
+                "require require_once return print unset")
 
 # PHP Standard Functions/Methods
 # (roughly based off of PHP Pocket Reference by O'Reilly)
@@ -56,7 +59,7 @@ PHP_FUNC = ("__construct __autoload __destruct __get __set __isset __unset "
             "array_reverse array_search array_shift array_slice array_splice "
             "array_sum array_unique array_unshift array_values array_walk "
             "arsort asort compact count current each end extract in_array key "
-            "krsort ksort list natcasesort natsort next pos prev range reset "
+            "krsort ksort natcasesort natsort next pos prev range reset "
             "rsort shuffle sizeof sort uasort uksort usort aspell_check "
             "aspell_new aspell_suggest bcadd bccomp bcdiv bcmod bcmul bcpow "
             "bcpowmod bcscale bcsqrt bcsub bzclose bzcompress bzdecompress "
@@ -230,7 +233,7 @@ PHP_FUNC = ("__construct __autoload __destruct __get __set __isset __unset "
             "mcrypt_ofb mdecrypt_generic mhash_count mhash_get_block_size "
             "mhash_get_hash_name mhash_keygen_s2k mhash mime_content_type "
             "connection_aborted connection_status connection_timeout constant "
-            "defined die eval exit get_browser highlight_file highlight_string "
+            "defined get_browser highlight_file highlight_string "
             "ignore_user_abort pack show_source sleep uniqid unpack usleep "
             "msql_affected_rows msql_close msql_connect msql_create_db define "
             "msql_data_seek msql_dbname msql_drop_db msql_dropdb msql_error "
@@ -340,11 +343,11 @@ PHP_FUNC = ("__construct __autoload __destruct __get __set __isset __unset "
             "stream_get_wrappers stream_register_filter stream_filter_append "
             "stream_select stream_set_blocking stream_set_timeout posix_getpid "
             "stream_set_write_buffer addcslashes addslashes bin2hex chop chr "
-            "chunk_split convert_cyr_string count_chars crc32 crypt echo "
+            "chunk_split convert_cyr_string count_chars crc32 crypt "
             "fprintf get_html_translation_table hebrev hebrevc explode "
             "htmlentities htmlspecialchars implode join levenshtein localeconv "
             "md5_file md5 metaphone money_format nl_langinfo nl2br pg_convert "
-            "parse_str print printf quoted_printable_decode quotemeta rtrim "
+            "parse_str printf quoted_printable_decode quotemeta rtrim "
             "setlocale sha1_file sha1 similar_text soundex sprintf sscanf ord "
             "str_repeat str_replace str_rot13 str_shuffle str_word_count ltrim "
             "strchr strcmp strcoll strcspn strip_tags stripcslashes strcasecmp "
@@ -352,13 +355,13 @@ PHP_FUNC = ("__construct __autoload __destruct __get __set __isset __unset "
             "strrchr strrev strrpos strspn strstr strtok strtolower strtoupper "
             "substr_count substr_replace substr trim ucfirst ucwords vprintf "
             "wordwrap base64_decode base64_encode get_meta_tags parse_url "
-            "rawurldecode rawurlencode urldecode urlencode doubleval empty "
+            "rawurldecode rawurlencode urldecode urlencode doubleval "
             "get_defined_vars get_resource_type gettype stripslashes str_pad "
             "intval is_array is_bool is_callable is_double is_float is_int "
             "is_long is_null is_numeric is_object is_real is_resource floatval "
-            "is_string isset print_r serialize settype strval unserialize "
+            "is_string print_r serialize settype strval unserialize "
             "var_dump var_export utf8_decode utf8_encode xml_error_string "
-            "xml_get_current_byte_index xml_get_current_column_number unset "
+            "xml_get_current_byte_index xml_get_current_column_number "
             "xml_get_current_line_number xml_get_error_code is_scalar vsprintf "
             "xml_parse xml_parser_create_ns xml_parser_create xml_parser_free "
             "xml_parser_get_option xml_parser_set_option number_format "
